Updated installer.sh